--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img src="images/Richard Bankole-logos_white.png."/>
+            <img src="images/richard bankole-logos_white.png."/>
             <nav>
                 <a href="#about"><span class="nava">About</span></a>
                 <a href="#skills"><span class="nava">Skills</span></a>
